[package]
name = "AudioSpectrogram"
version = "0.1.1"
edition = "2024"
authors = ["SHAO Liming <lmshao@163.com>"]
description = "A tool for generating spectrograms from audio files"
license = "MIT"
repository = "https://github.com/lmshao/AudioSpectrogram"

[dependencies]
hound = "3.5"
rustfft = "6.3"
image = "0.24"
colorgrad = "0.6"
imageproc = "0.23"
rusttype = "0.9"
clap = { version = "4.4", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["mp3", "aac", "flac", "wav", "pcm", "isomp4", "ogg", "vorbis"] }

[build-dependencies]
chrono = "0.4.41"
